loadbalancer-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: library-portal-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: library-portal
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: user-service
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: catalog-service
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: inventory-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: order-service
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: payment-service
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: notification-service
---
apiVersion: v1
kind: Service
metadata:
  name: search-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: search-service
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: recommendation-service
---
apiVersion: v1
kind: Service
metadata:
  name: analytics-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: analytics-service
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-service-lb
  namespace: extended-bookinfo
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 9080
    protocol: TCP
  selector:
    app: shipping-service
